# onlineChat

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  sonar-project.properties
.github/workflows/: codeql.yml
clientApp/: CMakeLists.txt  main.cpp
dependencies/imgui/include/: imgui_widgets.cpp
resources/fonts/: openSansRegular.h
resources/qrc/: images.qrc
serverApp/: CMakeLists.txt  main.cpp
sqlScripts/: create.sql
src/: buffer.h
src/chat/: chat.cpp  chat.h
src/chatSystem/: chat.cpp  chat.h  chatInfo.h  chatRepository.cpp  chatRepository.h  chatSystem.cpp  chatSystem.h
src/client/: client.cpp  client.h
src/common/: common.h
src/coroutineUtils/: coroutineUtils.h
src/database/: database.cpp  database.h
src/gui/: chatWindow.cpp  chatWindow.h  glfwWindow.cpp  glfwWindow.h  gui.cpp  gui.h  iImGuiWindow.h  iWindow.h  loginWindow.cpp  loginWindow.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  signUpWindow.cpp  signUpWindow.h
src/gui/chat/: chatPage.cpp  chatPage.h  chatPage.ui
src/gui/chat/delegate/: availableChatsDelegate.cpp  availableChatsDelegate.h  messagesDelegate.cpp  messagesDelegate.h
src/gui/chat/model/: availableChatsModel.cpp  availableChatsModel.h  messagesModel.cpp  messagesModel.h
src/gui/chat/scrollArea/: chatScrollArea.cpp  chatScrollArea.h
src/gui/chat/widget/: sideBarWidget.cpp  sideBarWidget.h  sideBarWidget.ui
src/gui/colors/: colors.h
src/gui/login/: loginPage.cpp  loginPage.h  loginPage.ui
src/gui/signIn/: signInPage.cpp  signInPage.h  signInPage.ui
src/messageBuffer/: messageBuffer.cpp  messageBuffer.h
src/networkCore/: networkCore.cpp  networkCore.h
src/server/: server.cpp  server.h
src/userData/: user.cpp  user.h  userCredentialsFile.cpp  userCredentialsFile.h  userData.cpp  userData.h  userRepository.cpp  userRepository.h
src/utils/: loadImage.cpp  loadImage.h
src/сhatSystem/: сhatSystem.cpp  сhatSystem.h
test/: main.cpp
